--- a/app/src/main/res/layout/activity_overzichtscherm.xml
+++ b/app/src/main/res/layout/activity_overzichtscherm.xml
@@ -16,32 +16,29 @@
             android:layout_height="140dp"
             android:src="@drawable/bfit_logo">
         </android.support.v7.widget.AppCompatImageView>
-    </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="250dp">
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_alignParentTop="true" />
-        <me.relex.circleindicator.CircleIndicator
-            android:id="@+id/indicator"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_alignParentBottom="true"/>
-        <!--<android.support.v7.widget.AppCompatImageView
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginTop="140dp"
-            android:src="@drawable/apparaten_bfit">
-        </android.support.v7.widget.AppCompatImageView>-->
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginTop="140dp">
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/pager"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_alignParentTop="true" />
+                <me.relex.circleindicator.CircleIndicator
+                    android:id="@+id/indicator"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_alignParentBottom="true" />
+            </RelativeLayout>
+        </LinearLayout>
     </RelativeLayout>
-
-
-
+    
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
