--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.application.niels.a2bfit.Activities.LoginActivity">
 
+    <android.support.v7.widget.AppCompatImageView
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:src="@drawable/bfit_logo">
+    </android.support.v7.widget.AppCompatImageView>
+
     <EditText
         android:id="@+id/etGebruikersNaam"
         android:layout_width="318dp"
@@ -18,7 +24,7 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="175dp" />
 
     <EditText
         android:id="@+id/etWachtwoord"
@@ -40,6 +46,9 @@
         android:layout_height="37dp"
         android:text="Log in"
         android:layout_marginLeft="8dp"
+        android:background="@color/colorPrimary"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -49,17 +58,16 @@
 
     <TextView
         android:id="@+id/tvRegistreer"
-        android:layout_width="133dp"
-        android:layout_height="27dp"
+        android:layout_width="193dp"
+        android:layout_height="38dp"
         android:text="Registreer hier"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
+        android:textColor="@color/colorBFitLogoOranje"
+        android:textSize="30sp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="150dp"
         app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />
 
 </android.support.constraint.ConstraintLayout>
