--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -6,4 +6,33 @@
     android:layout_height="match_parent"
     tools:context="com.application.niels.a2bfit.Activities.ProductActivity">
 
+    <TextView
+        android:id="@+id/tvProducten"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Beschikbare producten:"
+        android:textColor="#ff8d05"
+        android:textSize="30dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/listViewProducten" />
+
+    <ListView
+        android:id="@+id/listViewProducten"
+        android:layout_width="300dp"
+        android:layout_height="400dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="35dp" />
 </android.support.constraint.ConstraintLayout>
