--- a/app/src/main/res/layout/activity_schemas.xml
+++ b/app/src/main/res/layout/activity_schemas.xml
@@ -6,4 +6,76 @@
     android:layout_height="match_parent"
     tools:context="com.application.niels.a2bfit.Activities.SchemasActivity">
 
+    <TextView
+        android:id="@+id/tvSchemas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Schema's"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:textSize="30sp"
+        android:textColor="@color/colorBFitLogoOranje"/>
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="243dp"
+        android:layout_height="38dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvSchemas"
+        app:layout_constraintHorizontal_bias="0.504"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
+
+    <TextView
+        android:id="@+id/tvOefeningenVanSchema"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Oefeningen van schema"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/spinner2"
+        app:layout_constraintHorizontal_bias="0.497"
+        android:textSize="30sp"
+        android:textColor="@color/colorBFitLogoOranje"/>
+
+    <ListView
+        android:layout_width="281dp"
+        android:layout_height="276dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvOefeningenVanSchema"
+        android:background="@color/colorPrimary"/>
+
+    <Button
+        android:id="@+id/btnBekijkOefeningVanSchema"
+        android:layout_width="280dp"
+        android:layout_height="51dp"
+        android:text="Bekijk oefening"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:background="@color/colorPrimary"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"/>
 </android.support.constraint.ConstraintLayout>
