--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorNavBackground">#3F51B5</color>
+    <color name="colorBFitLogoOranje">#ff8d05</color>
 </resources>
