--- a/app/src/main/res/layout/activity_schemas.xml
+++ b/app/src/main/res/layout/activity_schemas.xml
@@ -26,15 +26,15 @@
         android:id="@+id/spinner2"
         android:layout_width="243dp"
         android:layout_height="38dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvSchemas"
-        app:layout_constraintHorizontal_bias="0.504"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvSchemas" />
 
     <TextView
         android:id="@+id/tvOefeningenVanSchema"
