--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -6,4 +6,72 @@
     android:layout_height="match_parent"
     tools:context="com.application.niels.a2bfit.Activities.ProductDetailsActivity">
 
+    <android.support.v7.widget.AppCompatImageView
+        android:layout_width="344dp"
+        android:layout_height="140dp"
+        android:src="@drawable/bfit_logo"
+        android:id="@+id/appCompatImageView"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp">
+    </android.support.v7.widget.AppCompatImageView>
+
+    <TextView
+        android:id="@+id/tvProductNaam"
+        android:layout_width="345dp"
+        android:layout_height="74dp"
+        android:text="geklikt product"
+        android:textAlignment="center"
+        android:textColor="#ff8d05"
+        android:textSize="30dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="70dp"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/tvProductKosten"
+        android:layout_width="271dp"
+        android:layout_height="32dp"
+        android:text="Kosten"
+        android:textColor="@color/colorPrimary"
+        android:textSize="30dp"
+        android:textAlignment="center"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvProductNaam"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintHorizontal_bias="0.506" />
+
+    <TextView
+        android:id="@+id/tvProductOmschrijving"
+        android:layout_width="330dp"
+        android:layout_height="170dp"
+        android:text="Omschrijving"
+        android:textColor="@color/colorPrimary"
+        android:textSize="25dp"
+        android:textAlignment="center"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvProductKosten"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
+
+
 </android.support.constraint.ConstraintLayout>
