--- a/app/src/main/res/layout/activity_oefening_details.xml
+++ b/app/src/main/res/layout/activity_oefening_details.xml
@@ -40,12 +40,12 @@
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/OefeningImageView"
+        android:src="@drawable/benchpress"
         android:layout_width="343dp"
         android:layout_height="250dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="10dp"
-        android:src="@drawable/OefeningenIMG/BenchPress.png"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
