--- a/app/src/main/res/layout/activity_oefening_details.xml
+++ b/app/src/main/res/layout/activity_oefening_details.xml
@@ -38,46 +38,43 @@
         android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
 
-    <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/OefeningImageView"
-        android:src="@drawable/benchpress"
+    <ImageView
         android:layout_width="343dp"
         android:layout_height="250dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvOefeningNaam"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvOefeningNaam">
-    </android.support.v7.widget.AppCompatImageView>
+        android:id="@+id/OefeningImageView" />
 
     <TextView
         android:id="@+id/tvAantalSets"
         android:layout_width="160dp"
         android:layout_height="45dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:text="Sets"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:textSize="30dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/OefeningImageView" />
+        android:layout_marginTop="7dp"
+        app:layout_constraintTop_toBottomOf="@+id/OefeningImageView"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/tvAantalReps"
         android:layout_width="160dp"
         android:layout_height="45dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         android:text="Reps"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:textSize="30dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/OefeningImageView" />
+        android:layout_marginTop="7dp"
+        app:layout_constraintTop_toBottomOf="@+id/OefeningImageView"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
