--- a/app/src/main/res/layout/activity_schemas.xml
+++ b/app/src/main/res/layout/activity_schemas.xml
@@ -23,7 +23,7 @@
         android:textColor="@color/colorBFitLogoOranje"/>
 
     <Spinner
-        android:id="@+id/spinner2"
+        android:id="@+id/SchemaSpinner"
         android:layout_width="243dp"
         android:layout_height="38dp"
         android:layout_marginEnd="8dp"
@@ -48,7 +48,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2"
+        app:layout_constraintTop_toBottomOf="@+id/SchemaSpinner"
         app:layout_constraintHorizontal_bias="0.497"
         android:textSize="30sp"
         android:textColor="@color/colorBFitLogoOranje"/>
