--- a/app/src/main/res/layout/activity_schemas.xml
+++ b/app/src/main/res/layout/activity_schemas.xml
@@ -49,20 +49,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/SchemaSpinner"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.52"
         android:textSize="30sp"
         android:textColor="@color/colorBFitLogoOranje"/>
-
-    <ListView
-        android:layout_width="281dp"
-        android:layout_height="276dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvOefeningenVanSchema"
-        android:background="@color/colorPrimary"/>
 
     <Button
         android:id="@+id/btnBekijkOefeningVanSchema"
@@ -78,4 +67,17 @@
         android:background="@color/colorPrimary"
         android:textColor="#FFFFFF"
         android:textSize="20sp"/>
+
+    <ListView
+        android:id="@+id/ListViewOefeningenVanSchema"
+        android:layout_width="281dp"
+        android:layout_height="276dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvOefeningenVanSchema" />
 </android.support.constraint.ConstraintLayout>
