--- a/app/src/main/res/layout/activity_oefeningen.xml
+++ b/app/src/main/res/layout/activity_oefeningen.xml
@@ -23,7 +23,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        app:layout_constraintHorizontal_bias="0.506" />
 
     <Spinner
         android:id="@+id/spinner"
