--- a/app/src/main/res/layout/activity_oefening_details.xml
+++ b/app/src/main/res/layout/activity_oefening_details.xml
@@ -39,42 +39,32 @@
         app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
 
     <android.support.v7.widget.AppCompatImageView
-        android:layout_width="343dp"
-        android:layout_height="250dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvOefeningNaam"
+        android:layout_width="275dp"
+        android:layout_height="195dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/OefeningImageView" />
+        android:id="@+id/OefeningImageView"
+        app:layout_constraintHorizontal_bias="0.507"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvOefeningNaam" />
 
     <TextView
-        android:id="@+id/tvAantalSets"
-        android:layout_width="160dp"
-        android:layout_height="45dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Sets"
-        android:textAlignment="center"
+        android:id="@+id/tvOefeningOmschrijving"
+        android:layout_width="272dp"
+        android:layout_height="102dp"
+        android:text="'omschrijving van oefening'"
         android:textColor="@color/colorPrimary"
-        android:textSize="30dp"
-        android:layout_marginTop="7dp"
-        app:layout_constraintTop_toBottomOf="@+id/OefeningImageView"
+        android:textSize="15dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <TextView
-        android:id="@+id/tvAantalReps"
-        android:layout_width="160dp"
-        android:layout_height="45dp"
-        android:text="Reps"
-        android:textAlignment="center"
-        android:textColor="@color/colorPrimary"
-        android:textSize="30dp"
-        android:layout_marginTop="7dp"
-        app:layout_constraintTop_toBottomOf="@+id/OefeningImageView"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/OefeningImageView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
