--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,43 +7,60 @@
     tools:context="com.application.niels.a2bfit.Activities.LoginActivity">
 
     <android.support.v7.widget.AppCompatImageView
-        android:layout_width="match_parent"
+        android:layout_width="280dp"
         android:layout_height="140dp"
-        android:src="@drawable/bfit_logo">
+        android:src="@drawable/bfit_logo"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/appCompatImageView2">
     </android.support.v7.widget.AppCompatImageView>
 
     <EditText
         android:id="@+id/etGebruikersNaam"
-        android:layout_width="318dp"
+        android:layout_width="280dp"
         android:layout_height="42dp"
         android:ems="10"
         android:hint="Gebruikersnaam"
+        android:drawableLeft="@drawable/ic_person_black"
+        android:drawablePadding="5dp"
+        android:drawableStart="@drawable/ic_person_black"
         android:inputType="textPersonName"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="175dp" />
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />
 
     <EditText
         android:id="@+id/etWachtwoord"
-        android:layout_width="318dp"
+        android:layout_width="280dp"
         android:layout_height="43dp"
         android:ems="10"
         android:hint="Wachtwoord"
+        android:drawableLeft="@drawable/ic_https_black"
+        android:drawablePadding="5dp"
+        android:drawableStart="@drawable/ic_https_black"
         android:inputType="textPassword"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/etGebruikersNaam" />
+        app:layout_constraintTop_toBottomOf="@+id/etGebruikersNaam"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <Button
         android:id="@+id/btnLogIn"
-        android:layout_width="319dp"
-        android:layout_height="37dp"
+        android:layout_width="280dp"
+        android:layout_height="48dp"
         android:text="Log in"
         android:layout_marginLeft="8dp"
         android:background="@color/colorPrimary"
@@ -54,7 +71,9 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/etWachtwoord"
-        app:layout_constraintHorizontal_bias="0.52" />
+        app:layout_constraintHorizontal_bias="0.52"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <TextView
         android:id="@+id/tvRegistreer"
@@ -67,7 +86,10 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="150dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 
 </android.support.constraint.ConstraintLayout>
