--- a/app/src/main/res/layout/activity_oefening_details.xml
+++ b/app/src/main/res/layout/activity_oefening_details.xml
@@ -8,21 +8,20 @@
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/appCompatImageView"
-        android:layout_width="343dp"
+        android:layout_width="280dp"
         android:layout_height="140dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:src="@drawable/bfit_logo"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp">
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent">
     </android.support.v7.widget.AppCompatImageView>
 
     <TextView
         android:id="@+id/tvOefeningNaam"
-        android:layout_width="351dp"
+        android:layout_width="280dp"
         android:layout_height="37dp"
         android:text="OefeningNaam"
         android:textAlignment="center"
@@ -34,37 +33,32 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
 
     <android.support.v7.widget.AppCompatImageView
-        android:layout_width="275dp"
+        android:layout_width="280dp"
         android:layout_height="195dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/OefeningImageView"
-        app:layout_constraintHorizontal_bias="0.507"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/tvOefeningNaam" />
 
     <TextView
         android:id="@+id/tvOefeningOmschrijving"
-        android:layout_width="272dp"
+        android:layout_width="280dp"
         android:layout_height="102dp"
         android:text="'omschrijving van oefening'"
         android:textColor="@color/colorPrimary"
-        android:textSize="15dp"
+        android:textSize="18dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/OefeningImageView"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_marginBottom="8dp" />
 
 </android.support.constraint.ConstraintLayout>
