--- a/app/src/main/res/layout/activity_oefeningen.xml
+++ b/app/src/main/res/layout/activity_oefeningen.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/tvKiesSpiergroep"
-        android:layout_width="271dp"
+        android:layout_width="280dp"
         android:layout_height="55dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -23,24 +23,22 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintHorizontal_bias="0.506" />
+        android:layout_marginEnd="8dp" />
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="175dp"
+        android:layout_width="280dp"
         android:layout_height="34dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="-7dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvKiesSpiergroep"
-        app:layout_constraintHorizontal_bias="0.502" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvKiesSpiergroep" />
 
     <TextView
         android:id="@+id/tvOefeningen"
-        android:layout_width="213dp"
+        android:layout_width="280dp"
         android:layout_height="46dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -48,42 +46,22 @@
         android:textSize="30sp"
         android:textAlignment="center"
         android:text="Oefeningen"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
-
-    <Button
-        android:id="@+id/btnBekijkOefening"
-        android:layout_width="282dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Bekijk oefening"
-        android:background="@color/colorPrimary"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.508" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/listViewOefeningen" />
 
     <ListView
         android:id="@+id/listViewOefeningen"
-        android:layout_width="281dp"
-        android:layout_height="271dp"
+        android:layout_width="280dp"
+        android:layout_height="300dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:background="@color/colorPrimary"
-        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvOefeningen" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 </android.support.constraint.ConstraintLayout>
