--- a/app/src/main/res/layout/activity_registreer.xml
+++ b/app/src/main/res/layout/activity_registreer.xml
@@ -7,36 +7,48 @@
     tools:context="com.application.niels.a2bfit.Activities.RegistreerActivity">
 
     <android.support.v7.widget.AppCompatImageView
-        android:layout_width="344dp"
+        android:layout_width="280dp"
         android:layout_height="140dp"
         android:src="@drawable/bfit_logo"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:id="@+id/appCompatImageView3"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp">
     </android.support.v7.widget.AppCompatImageView>
 
     <EditText
         android:id="@+id/etNaam"
-        android:layout_width="255dp"
-        android:layout_height="50dp"
+        android:layout_width="280dp"
+        android:layout_height="40dp"
         android:ems="10"
-        android:hint="Naam"
+        android:hint="Gebruikersnaam"
+        android:drawableLeft="@drawable/ic_person_black"
+        android:drawablePadding="5dp"
+        android:drawableStart="@drawable/ic_person_black"
         android:inputType="textPersonName"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="160dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnRegistreer"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
 
     <EditText
         android:id="@+id/etWachtwoord"
-        android:layout_width="255dp"
-        android:layout_height="45dp"
+        android:layout_width="280dp"
+        android:layout_height="40dp"
         android:ems="10"
         android:hint="Wachtwoord"
+        android:drawableLeft="@drawable/ic_https_black"
+        android:drawablePadding="5dp"
+        android:drawableStart="@drawable/ic_https_black"
         android:inputType="textPassword"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -50,24 +62,27 @@
 
     <EditText
         android:id="@+id/etLeeftijd"
-        android:layout_width="256dp"
-        android:layout_height="42dp"
+        android:layout_width="280dp"
+        android:layout_height="40dp"
         android:ems="10"
         android:hint="Leeftijd"
+        android:drawableLeft="@drawable/ic_loop_black"
+        android:drawablePadding="5dp"
+        android:drawableStart="@drawable/ic_loop_black"
         android:inputType="number"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/etWachtwoord"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
     <Button
         android:id="@+id/btnRegistreer"
-        android:layout_width="256dp"
-        android:layout_height="48dp"
+        android:layout_width="280dp"
+        android:layout_height="45dp"
         android:text="Registreer"
         android:layout_marginLeft="8dp"
         android:background="@color/colorPrimary"
@@ -76,20 +91,23 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/etLeeftijd"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 
     <EditText
         android:id="@+id/etMail"
-        android:layout_width="256dp"
-        android:layout_height="44dp"
+        android:layout_width="280dp"
+        android:layout_height="40dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Email-adres"
+        android:drawableLeft="@drawable/ic_mail_black"
+        android:drawablePadding="5dp"
+        android:drawableStart="@drawable/ic_mail_black"
+        android:hint="E-mail"
         android:inputType="textEmailAddress"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
