--- a/app/src/main/res/layout/activity_start_training.xml
+++ b/app/src/main/res/layout/activity_start_training.xml
@@ -6,51 +6,62 @@
     android:layout_height="match_parent"
     tools:context="com.application.niels.a2bfit.Activities.StartTrainingActivity">
 
+    <android.support.v7.widget.AppCompatImageView
+        android:layout_width="280dp"
+        android:layout_height="140dp"
+        android:src="@drawable/bfit_logo"
+        android:id="@+id/appCompatImageView3"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent">
+    </android.support.v7.widget.AppCompatImageView>
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="274dp"
+        android:layout_width="280dp"
         android:layout_height="44dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:textColor="@color/colorBFitLogoOranje"
         android:textSize="30sp"
         android:textAlignment="center"
         android:text="Kies schema"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView3"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Spinner
         android:id="@+id/spinnerSchemas"
-        android:layout_width="276dp"
+        android:layout_width="280dp"
         android:layout_height="38dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/btnStartTraining"
         android:layout_width="280dp"
-        android:layout_height="41dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:text="Start training"
         android:background="@color/colorPrimary"
+        android:text="Start training"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerSchemas" />
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
