--- a/app/src/main/res/layout/activity_start_training_met_schema.xml
+++ b/app/src/main/res/layout/activity_start_training_met_schema.xml
@@ -11,8 +11,8 @@
 
     <TextView
         android:id="@+id/tvSchemaType"
-        android:layout_width="279dp"
-        android:layout_height="49dp"
+        android:layout_width="280dp"
+        android:layout_height="40dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:text="Schema"
@@ -27,73 +27,74 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp" />
 
-    <TextView
-        android:id="@+id/tvGewicht"
-        android:layout_width="133dp"
-        android:layout_height="43dp"
-        android:text="Gewicht"
-        android:textColor="@color/colorBFitLogoOranje"
-        android:textSize="30sp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/lvOefeningenVanSchema"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/etGewicht"
-        android:layout_marginRight="0dp" />
-
     <EditText
         android:id="@+id/etGewicht"
-        android:layout_width="151dp"
-        android:layout_height="43dp"
+        android:layout_width="280dp"
+        android:layout_height="40dp"
         android:ems="10"
+        android:hint="Gewicht"
+        android:drawableLeft="@drawable/ic_fitness_center_black"
+        android:drawablePadding="5dp"
+        android:drawableStart="@drawable/ic_fitness_center_black"
         android:inputType="number"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/lvOefeningenVanSchema"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <TextView
-        android:id="@+id/tvDatum"
-        android:layout_width="133dp"
-        android:layout_height="43dp"
-        android:text="Datum"
-        android:textColor="@color/colorBFitLogoOranje"
-        android:textSize="30sp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvGewicht"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/etDatum"
-        android:layout_marginRight="8dp" />
-
-    <ListView
-        android:id="@+id/lvOefeningenVanSchema"
-        android:layout_width="281dp"
-        android:layout_height="271dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="0dp"
-        android:background="@color/colorPrimary"
-        app:layout_constraintHorizontal_bias="0.412"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvSchemaType" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/etDatum" />
 
     <EditText
         android:id="@+id/etDatum"
-        android:layout_width="151dp"
-        android:layout_height="43dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="280dp"
+        android:layout_height="40dp"
         android:ems="10"
         android:inputType="date"
+        android:hint="Datum"
+        android:drawableLeft="@drawable/ic_date_range_black"
+        android:drawablePadding="5dp"
+        android:drawableStart="@drawable/ic_date_range_black"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etGewicht" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnOefeningAfvinken" />
+
+    <Button
+        android:id="@+id/btnOefeningAfvinken"
+        android:layout_width="280dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:text="Oefening afvinken"
+        android:background="@color/colorPrimary"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.508" />
+
+    <ListView
+        android:id="@+id/lvOefeningenVanSchema"
+        android:layout_width="280dp"
+        android:choiceMode="singleChoice"
+        android:listSelector="#ff8d05"
+        android:layout_height="271dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@color/colorPrimary"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvSchemaType"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/etGewicht" />
 
 </android.support.constraint.ConstraintLayout>
