--- a/app/src/main/res/menu/navigatie_menu.xml
+++ b/app/src/main/res/menu/navigatie_menu.xml
@@ -9,6 +9,8 @@
         android:title="Producten" />
     <item android:id="@+id/nav_StartTraining"
         android:title="Start training" />
+    <item android:id="@+id/nav_Trainingsdetails"
+        android:title="Trainingsdetails" />
     <item android:id="@+id/nav_Uitloggen"
         android:title="Uitloggen" />
 </menu>
