--- a/app/src/main/res/layout/activity_start_training.xml
+++ b/app/src/main/res/layout/activity_start_training.xml
@@ -47,6 +47,22 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
+    <EditText
+        android:id="@+id/etDatum"
+        android:layout_width="280dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:inputType="date"
+        android:hint="Datum"
+        android:drawablePadding="5dp"
+        android:drawableStart="@drawable/ic_date_range_black"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerSchemas" />
+
     <Button
         android:id="@+id/btnStartTraining"
         android:layout_width="280dp"
