Dal verder toegevoegd. Prestaties toegevoegd.

--- a/app/src/main/res/layout/activity_schemas.xml
+++ b/app/src/main/res/layout/activity_schemas.xml
@@ -75,6 +75,7 @@
         android:layout_height="276dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:listSelector="#ff8d05"
         android:background="@color/colorPrimary"
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintLeft_toLeftOf="parent"
