--- a/app/src/main/res/layout/activity_prestatie.xml
+++ b/app/src/main/res/layout/activity_prestatie.xml
@@ -6,4 +6,49 @@
     android:layout_height="match_parent"
     tools:context="com.application.niels.a2bfit.Activities.PrestatieActivity">
 
+    <TextView
+        android:id="@+id/tvKiesSpiergroep"
+        android:layout_width="280dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="Prestaties"
+        android:textColor="@color/colorBFitLogoOranje"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="5dp" />
+
+    <ListView
+        android:id="@+id/ListViewPrestaties"
+        android:layout_width="280dp"
+        android:layout_height="280dp"
+        android:background="@color/colorPrimary"
+        android:listSelector="#ff8d05"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvKiesSpiergroep"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/tvPrestatieOmschrijving"
+        android:layout_width="280dp"
+        android:layout_height="63dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="'omschrijving van prestatie'"
+        android:textColor="@color/colorPrimary"
+        android:textSize="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/ListViewPrestaties" />
+
 </android.support.constraint.ConstraintLayout>
