--- a/app/src/main/res/layout/activity_start_training_met_schema.xml
+++ b/app/src/main/res/layout/activity_start_training_met_schema.xml
@@ -65,19 +65,19 @@
         app:layout_constraintBottom_toTopOf="@+id/btnBekijkOefening" />
 
     <Button
-    android:id="@+id/btnTrainingBeeindigen"
-    android:layout_width="280dp"
-    android:layout_height="45dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginStart="8dp"
-    android:text="Training beëindigen"
-    android:background="@color/colorPrimary"
-    android:textColor="#FFFFFF"
-    android:textSize="20sp"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/btnTrainingBeeindigen"
+        android:layout_width="280dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:text="Training beëindigen"
+        android:background="@color/colorPrimary"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp" />
 
@@ -102,6 +102,7 @@
         android:id="@+id/lvOefeningenVanSchema"
         android:layout_width="280dp"
         android:layout_height="240dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -109,9 +110,8 @@
         android:background="@color/colorPrimary"
         android:choiceMode="singleChoice"
         android:listSelector="#ff8d05"
+        app:layout_constraintBottom_toTopOf="@+id/etGewicht"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/etGewicht" />
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
