Gebruiker en fitness toegevoegd. Package namen aan gepast. Unit tests toegevoegd, en alle logica uit de activities gehaald.

--- a/app/src/main/res/layout/activity_start_training_met_schema.xml
+++ b/app/src/main/res/layout/activity_start_training_met_schema.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context="com.application.niels.a2bfit.Activities.StartTrainingMetSchemaActivity">
+    tools:context="com.a2bfit.Activity.StartTrainingMetSchemaActivity">
 
 
     <TextView
