--- a/app/src/main/res/layout/activity_oefeningen.xml
+++ b/app/src/main/res/layout/activity_oefeningen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.application.niels.a2bfit.Activities.OefeningenActivity">
+    tools:context="com.a2bfit.Activity.OefeningenActivity">
 
 
 
