--- a/app/src/main/res/layout/activity_overzichtscherm.xml
+++ b/app/src/main/res/layout/activity_overzichtscherm.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.application.niels.a2bfit.Activities.OverzichtschermActivity"
+    tools:context="com.a2bfit.Activity.OverzichtschermActivity"
     android:id="@+id/drawerLayout">
 
     <RelativeLayout
