--- a/app/src/main/res/layout/activity_prestatie.xml
+++ b/app/src/main/res/layout/activity_prestatie.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.application.niels.a2bfit.Activities.PrestatieActivity">
+    tools:context="com.a2bfit.Activity.PrestatieActivity">
 
     <TextView
         android:id="@+id/tvKiesSpiergroep"
