--- a/app/src/main/res/layout/activity_start_training.xml
+++ b/app/src/main/res/layout/activity_start_training.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.application.niels.a2bfit.Activities.StartTrainingActivity">
+    tools:context="com.a2bfit.Activity.StartTrainingActivity">
 
     <android.support.v7.widget.AppCompatImageView
         android:layout_width="280dp"
